@@ -6,6 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/red5_server_xuggle_timestamp_fixes"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/nsvplugin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/icyplugin"/>
 	<classpathentry kind="output" path="www/WEB-INF/classes"/>
 </classpath>
