@@ -19,8 +19,14 @@ package org.red5.server.plugin.auth;
  * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
  */
 
+import java.security.Security;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
+import org.apache.commons.codec.binary.Base64;
+import org.bouncycastle.crypto.digests.MD5Digest;
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.red5.logging.Red5LoggerFactory;
 import org.red5.server.adapter.ApplicationLifecycle;
 import org.red5.server.api.IConnection;
@@ -45,14 +51,24 @@ public class FMSAuthenticationHandler extends ApplicationLifecycle {
 	private static StatusObject invalidAuthMod = new StatusObject(StatusCodes.NC_CONNECT_REJECTED, StatusObject.ERROR,
 			"[ AccessManager.Reject ] : [ authmod=adobe ] : ?reason=invalid_authmod&opaque=-");
 
-	/*
 	private static StatusObject noSuchUser = new StatusObject(StatusCodes.NC_CONNECT_REJECTED, StatusObject.ERROR,
 			"[ AccessManager.Reject ] : [ authmod=adobe ] : ?reason=nosuchuser&opaque=sTQAAA=");
 
+	/*
 	private static StatusObject invalidSessionId = new StatusObject(StatusCodes.NC_CONNECT_REJECTED,
 			StatusObject.ERROR, "[ AccessManager.Reject ] : [ authmod=adobe ] : ?reason=invalid_session_id&opaque=-");
 	*/
 
+	//test password - testing only - user passwords should be looked up in a real implementation
+	private static final String password = "test";
+		
+	private static ConcurrentMap<String, AuthSession> sessions = new ConcurrentHashMap<String, AuthSession>();
+	
+	static {
+		//get security provider
+		Security.addProvider(new BouncyCastleProvider());		
+	}
+	
 	public boolean appConnect(IConnection conn, Object[] params) {
 
         log.info("appConnect");
@@ -88,24 +104,42 @@ public class FMSAuthenticationHandler extends ApplicationLifecycle {
     			if ("adobe".equals(authmod)) {
         			String response = queryString.get("response");
         			log.debug("Response: {}", response);
-        			/*
-        			 * Base64 base64 = new Base64(); 
-        			 * byte[] salt =
-        			 * base64.decode("salt=0xkAAA==&challenge=sTQAAA==&opaque=sTQAAA="
-        			 * );
-        			 * 
-        			 * System.out.println(salt.toString());
-        			 * challenge=khcAAA==&response=Qp0GSBumMwziL6I6y3iZaQ==&opaque=ExcAAA==.
-        			 * 
-        			 * danielr:thechallenge:theresponse
-        			 */
-        			if (authmod != null && user != null && response == null) {
+        			//no response yet, send salt etc.
+        			if (response != null) {
+        				//lookup session and remove at the same time
+        				AuthSession session = sessions.remove(user);
+        				//verify response
+        				if (session != null) {
+            				//1. construct the first part
+        					String str1 = user + session.salt + password;
+        					log.trace("Part 1: {}", str1);
+        					//2. md5 and base64 encode
+        					String hash1 = calculateMD5(str1);
+        					log.trace("Hash 1: {}", hash1);
+        					//3. construct second part using challenge from client
+        					String str2 = hash1 + session.challenge + queryString.get("challenge");
+        					log.trace("Part 2: {}", str2);
+        					//4. md5 and base64 encode
+        					String hash2 = calculateMD5(str2);
+        					log.trace("Hash 2: {}", hash2);
+        					//5. compare response with hash2
+        					if (hash2.equals(response)) {
+        						log.debug("Response is valid");
+                				//return success
+                				result = true;
+        					} else {
+        						log.info("Response did not match");
+        					}
+        				} else {
+        					status = noSuchUser;
+        				}
+        			} else {
+        				//create auth session
+        				AuthSession session = new AuthSession();
+        				sessions.put(user, session);
         				//set as rejected
         				status = new StatusObject(StatusCodes.NC_CONNECT_REJECTED, StatusObject.ERROR, 
-        						String.format("[ AccessManager.Reject ] : [ authmod=%s ] : ?reason=needauth&user=%s&salt=0xkAAA==&challenge=sTQAAA==&opaque=sTQAAA=", authmod, user));
-        			} else {
-        				//dont send success or this will override the rest of the listeners, just send true
-        				result = true;
+        						String.format("[ AccessManager.Reject ] : [ authmod=adobe ] : ?reason=needauth&user=%s&salt=%s&challenge=%s&opaque=%s", user, session.salt, session.challenge, session.opaque));
         			}    				
     			} else {
     				status = invalidAuthMod;
@@ -127,5 +161,53 @@ public class FMSAuthenticationHandler extends ApplicationLifecycle {
 		return result;
 	}
 	
+	/**
+	 * Generate an MD5 hash and return encoded with Base64.
+	 * 
+	 * @param input
+	 * @return
+	 */
+	private String calculateMD5(String input) {
+		String result = null;
+		MD5Digest md5;
+		try {
+			md5 = new MD5Digest();
+			byte[] output = null;
+			try {
+				byte[] buf = input.getBytes();
+				md5.update(buf, 0, buf.length); 
+				output = new byte[md5.getDigestSize()]; 
+				md5.doFinal(output, 0); 
+			} catch (Exception e) {
+				log.error("State error", e);
+			}
+			//encode in b64 and strip any cr/lf
+			result = Base64.encodeBase64String(output).replaceAll("(\r\n|\r|\n|\n\r)", "");
+		} catch (SecurityException e) {
+			log.error("Security exception when getting MD5", e);
+		} catch (Exception e) {
+			log.error("Error using MD5", e);
+		}				
+		return result;
+	}
+	
+	private final class AuthSession {
+		
+		public String salt;
+		
+		public String challenge;
+		
+		public String opaque;
+		
+		public long created = System.currentTimeMillis();
+		
+		{
+			salt = calculateMD5("red5rox");
+			challenge = calculateMD5("red5");
+			//these are equal for now
+			opaque = challenge;
+		}
+		
+	}
 
 }
